# konan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  release-please-config.json
.github/workflows/: python-ci.yml  release-please.yaml
benchmarks/: bench.py
crates/konan-core/: Cargo.toml
crates/konan-core/benches/: chunkers.rs
crates/konan-core/examples/: decompose.rs
crates/konan-core/src/: chunk.rs  chunker.rs  embedder.rs  error.rs  lib.rs  semantic.rs  text.rs
crates/konan-core/src/strategies/: fixed_size.rs  markdown.rs  mod.rs  naive.rs  recursive.rs  sentence.rs  token.rs
crates/konan-py/: Cargo.toml
crates/konan-py/src/: chunk.rs  chunkers.rs  common.rs  errors.rs  lib.rs  semantic.rs
docs/superpowers/plans/: 2026-06-07-konan-chunkers.md
docs/superpowers/specs/: 2026-06-07-konan-chunkers-design.md  2026-06-07-konan-openai-client-repr-design.md
python/konan/: __init__.py  _konan.pyi
tests/: conftest.py  test_async.py  test_chunkers.py  test_repr.py  test_semantic.py
