[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "konan"
version = "0.1.0"
description = "Blazingly fast text chunkers in Rust with pythonic bindings"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "4thel00z" }]
keywords = ["chunking", "text-splitting", "rag", "embeddings", "tokenizer", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/4thel00z/konan"
Issues = "https://github.com/4thel00z/konan/issues"

[project.optional-dependencies]
bench = [
    "chonkie>=1.0",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.7",
]

[tool.maturin]
python-source = "python"
module-name = "konan._konan"
manifest-path = "crates/konan-py/Cargo.toml"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7",
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
