[package]
name = "konan-core"
description = "Blazingly fast text chunking strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-openai = { version = "0.41", default-features = false, features = ["rustls", "embedding", "middleware"] }
async-trait = "0.1"
bpe-openai = "0.3.0"
futures = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
rayon = "1.10"
regex = "1"
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tower = "0.5"
unicode-segmentation = "1.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "chunkers"
harness = false
