[package]
name = "konan-core"
description = "Blazingly fast text chunking strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-openai = { version = "0.41", default-features = false, features = ["rustls", "embedding", "middleware"] }
async-trait = "0.1"
bpe-openai = "0.3.0"
futures = "0.3"
icu_segmenter = { version = "2.2.0", default-features = false, features = ["compiled_data"] }
memchr = "2.8.1"
pulldown-cmark = { version = "0.13", default-features = false }
rayon = "1.10"
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tower = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8"
# Only the fixed-size equivalence oracle still needs the regex engine.
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "chunkers"
harness = false
