[package]
name = "konan-py"
description = "Python bindings for konan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_konan"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
konan-core = { path = "../konan-core" }
pyo3 = { version = "0.25", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
